--- a/blendtec/templates/default/td-agent.conf.erb
+++ b/blendtec/templates/default/td-agent.conf.erb
@@ -37,8 +37,8 @@
   path logs/
   s3_object_key_format %{path}access/%{hostname}/apache/ts=%{time_slice}/access_%{index}.%{file_extension}
   buffer_path /var/log/td-agent/s3.apache.access
-  time_slice_format %Y%m%d%H%M
-  time_slice_wait 1m
+  time_slice_format %Y%m%d%H
+  time_slice_wait 10m
   utc
   buffer_chunk_limit 256m
 </match>
@@ -66,8 +66,8 @@
   path logs/
   s3_object_key_format %{path}error/%{hostname}/apache/ts=%{time_slice}/errors_%{index}.%{file_extension}
   buffer_path /var/log/td-agent/s3.apache.error
-  time_slice_format %Y%m%d%H%M
-  time_slice_wait 1m
+  time_slice_format %Y%m%d%H
+  time_slice_wait 10m
   utc
   buffer_chunk_limit 256m
 </match>
@@ -95,8 +95,8 @@
   path logs/
   s3_object_key_format %{path}access/%{hostname}/<%= @application %>/ts=%{time_slice}/access_%{index}.%{file_extension}
   buffer_path /var/log/td-agent/s3.<%= @application %>.access
-  time_slice_format %Y%m%d%H%M
-  time_slice_wait 1m
+  time_slice_format %Y%m%d%H
+  time_slice_wait 10m
   utc
   buffer_chunk_limit 256m
 </match>
@@ -124,8 +124,8 @@
   path logs/
   s3_object_key_format %{path}error/%{hostname}/<%= @application %>/ts=%{time_slice}/errors_%{index}.%{file_extension}
   buffer_path /var/log/td-agent/s3.<%= @application %>.error
-  time_slice_format %Y%m%d%H%M
-  time_slice_wait 1m
+  time_slice_format %Y%m%d%H
+  time_slice_wait 10m
   utc
   buffer_chunk_limit 256m
 </match>
