Fixes T1241: Added new keys to distinguish apache and app, access and error

--- a/blendtec/templates/default/td-agent.conf.erb
+++ b/blendtec/templates/default/td-agent.conf.erb
@@ -64,8 +64,8 @@
   s3_bucket <%= @bucket %>
   s3_endpoint <%= @s3_end_point %>
   path <%= @path %>
-  s3_object_key_format <%= @s3_object_key_format %>
-  buffer_path <%= @buffer_path %>
+  apache_error_s3_object_key_format <%= @apache_error_s3_object_key_format %>
+  apache_error_buffer_path <%= @apache_error_buffer_path %>
   time_slice_format <%= @time_slice_format %>
   time_slice_wait <%= @time_slice_wait %>
   <%= @time_zone %>
@@ -93,8 +93,8 @@
   s3_bucket <%= @bucket %>
   s3_endpoint <%= @s3_end_point %>
   path <%= @path %>
-  s3_object_key_format <%= @s3_object_key_format %>
-  buffer_path <%= @buffer_path %>
+  access_s3_object_key_format <%= @access_s3_object_key_format %>
+  access_buffer_path <%= @access_buffer_path %>
   time_slice_format <%= @time_slice_format %>
   time_slice_wait <%= @time_slice_wait %>
   <%= @time_zone %>
@@ -122,8 +122,8 @@
   s3_bucket <%= @bucket %>
   s3_endpoint <%= @s3_end_point %>
   path <%= @path %>
-  s3_object_key_format <%= @s3_object_key_format %>
-  buffer_path <%= @buffer_path %>
+  access_error_s3_object_key_format <%= @access_error_s3_object_key_format %>
+  access_error_buffer_path <%= @access_error_buffer_path %>
   time_slice_format <%= @time_slice_format %>
   time_slice_wait <%= @time_slice_wait %>
   <%= @time_zone %>
