--- a/blendtec/templates/default/td-agent.conf.erb
+++ b/blendtec/templates/default/td-agent.conf.erb
@@ -35,8 +35,8 @@
   s3_bucket <%= @bucket %>
   s3_endpoint <%= @s3_end_point %>
   path <%= @path %>
-  apache_s3_object_key_format <%= @s3_object_key_format %>
-  apache_buffer_path <%= @buffer_path %>
+  apache_s3_object_key_format <%= @apache_s3_object_key_format %>
+  apache_buffer_path <%= @apache_buffer_path %>
   time_slice_format <%= @time_slice_format %>
   time_slice_wait <%= @time_slice_wait %>
   <%= @time_zone %>
