--- a/cakephp/templates/default/database.php.erb
+++ b/cakephp/templates/default/database.php.erb
@@ -7,5 +7,6 @@
             'login' => '<%= @user%>',
             'password' => '<%= @password%>',
             'database' => '<%= @db%>',
+	    'encoding' => 'UTF8',
         );
     }
