--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -118,7 +118,7 @@ Configure::write('Routing.prefixes', array(<%= @prefixes %>));
 * Turn off all caching application-wide.
 *
 */
-//Configure::write('Cache.disable', true);
+Configure::write('Cache.disable', false);
 
 /**
 * Enable cache checking.
@@ -129,7 +129,7 @@ Configure::write('Routing.prefixes', array(<%= @prefixes %>));
 * or in each action using $this->cacheAction = true.
 *
 */
-//Configure::write('Cache.check', true);
+Configure::write('Cache.check', true);
 
 /**
 * Enable cache view prefixes.
@@ -285,3 +285,4 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   'serialize' => ($engine === 'File'),
   'duration' => $duration
   ));
+
