--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -293,3 +293,11 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   'serialize' => ($engine === 'File'),
   'path' => CACHE . 'long' . DS,
   ));
+  
+  Cache::config('long', array(
+  'engine' => $engine,
+  'duration' => '+1 hour',
+  'probability' => 100,
+  'serialize' => ($engine === 'File'),
+  'path' => CACHE . 'short' . DS,
+  ));
