proper cake and memcache

--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -315,4 +315,5 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
     'engine' => $engine,
     'duration'=> 3600,
     'servers' => array($server), 
-    'compress' => false));
+    'compress' => false
+  ));
