--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -265,7 +265,7 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   }
 
   // Prefix each application on the same server with a different string, to avoid Memcache and APC conflicts.
-  $prefix = 'myapp_';
+  $prefix = '<%= @hostname %>_myapp_';
 
   /**
   * Configure the cache used for general framework caching.  Path information,
