--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -266,7 +266,7 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
 
   // Prefix each application on the same server with a different string, to avoid Memcache and APC conflicts.
   $corePrefix = '<%= @hostname %>_myapp_';
-  $prefix = "blendtec_"
+  $prefix = "blendtec_";
   /**
   * Configure the cache used for general framework caching.  Path information,
   * object listings, and translation cache files are stored with this configuration.
