--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -261,19 +261,19 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   // In development mode, caches should expire quickly.
   $duration = '+999 days';
   if (Configure::read('debug') >= 1) {
-    $duration = '+10 seconds';
+    $duration = '+10 minutes';
   }
 
   // Prefix each application on the same server with a different string, to avoid Memcache and APC conflicts.
-  $prefix = '<%= @hostname %>_myapp_';
-
+  $corePrefix = '<%= @hostname %>_myapp_';
+  $prefix = "blendtec_";
   /**
   * Configure the cache used for general framework caching.  Path information,
   * object listings, and translation cache files are stored with this configuration.
   */
   Cache::config('_cake_core_', array(
     'engine' => $engine,
-    'prefix' => $prefix . 'cake_core_',
+    'prefix' => $corePrefix . 'cake_core_',
     'path' => CACHE . 'persistent' . DS,
     'serialize' => ($engine === 'File'),
     'duration' => $duration,
@@ -286,7 +286,7 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   */
   Cache::config('_cake_model_', array(
   'engine' => $engine,
-  'prefix' => $prefix . 'cake_model_',
+  'prefix' => $corePrefix . 'cake_model_',
   'path' => CACHE . 'models' . DS,
   'serialize' => ($engine === 'File'),
   'duration' => $duration,
@@ -313,6 +313,7 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
 
   Cache::config('sessions', array(
     'engine' => $engine,
+    'prefix' => $prefix,
     'duration'=> 3600,
     'servers' => array($server), 
     'compress' => false
