--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -257,9 +257,10 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   *       and their setttings.
   */
   $engine = '<%= @cache_engine %>';
-  $server = '<%= @cache_server %>'; 
+  $dataServer = '<%= @cache_data_server %>';
+  $sessionServer = '<%= @cache_session_server %>'; 
   // In development mode, caches should expire quickly.
-  $duration = '+999 days';
+  $duration = '+1 days';
   if (Configure::read('debug') >= 1) {
     $duration = '+10 minutes';
   }
@@ -277,7 +278,7 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
     'path' => CACHE . 'persistent' . DS,
     'serialize' => ($engine === 'File'),
     'duration' => $duration,
-    'servers' => array($server)
+    'servers' => array($dataServer)
   ));
 
   /**
@@ -290,7 +291,7 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   'path' => CACHE . 'models' . DS,
   'serialize' => ($engine === 'File'),
   'duration' => $duration,
-  'servers' => array($server)
+  'servers' => array($dataServer)
   ));
 
   Cache::config('long', array(
@@ -299,7 +300,7 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   'probability' => 100,
   'serialize' => ($engine === 'File'),
   'path' => CACHE . 'long' . DS,
-  'servers' => array($server)
+  'servers' => array($dataServer)
   ));
   
   Cache::config('short', array(
@@ -308,13 +309,13 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
   'probability' => 100,
   'serialize' => ($engine === 'File'),
   'path' => CACHE . 'short' . DS,
-  'servers' => array($server)
+  'servers' => array($dataServer)
   ));
 
   Cache::config('sessions', array(
     'engine' => $engine,
     'prefix' => $prefix,
     'duration'=> 3600,
-    'servers' => array($server), 
+    'servers' => array($sessionServer), 
     'compress' => false
   ));
