enable seo redirects in core.php
Summary:
WEB-364 #fixed
enable seo redirects in core.php

Test Plan: test on stage now that SEO redirects is landed in the main repos

Reviewers: #everyone, gwarner

Reviewed By: #everyone, gwarner

Differential Revision: https://dev.blendtec.com/D1598

--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -77,6 +77,13 @@ Configure::write('Exception', array(
 'renderer' => 'ExceptionRenderer',
 'log' => true
 ));
+if (file_exists(APP . 'Plugin' . DS . 'Seo')) {
+  Configure::write('Exception', array(
+  'handler' => 'SeoExceptionHandler::handle',
+  'renderer' => 'ExceptionRenderer',
+  'log' => true
+  ));
+}
 
 /**
 * Application wide charset encoding
