--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -326,3 +326,9 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
     'servers' => array($sessionServer), 
     'compress' => false
   ));
+
+  //from usaepay
+  Configure::write('CompleteGateway', array(
+      'key' => <%= @cms_key %>
+    )
+  );
