--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -329,6 +329,6 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
 
   //from usaepay
   Configure::write('CompleteGateway', array(
-      'key' => <%= @cms_key %>
+      'key' => '<%= @cms_key %>'
     )
   );
