Editing email parsing settings for AWS
Summary: BTCOM-556 #fixed

Test Plan: Michael said cross my fingers and hope to cry

Reviewers: #everyone, gwarner

Reviewed By: #everyone, gwarner

Differential Revision: https://dev.blendtec.com/D1748

--- a/cakephp/templates/default/database.php.erb
+++ b/cakephp/templates/default/database.php.erb
@@ -9,4 +9,16 @@
             'database' => '<%= @db%>',
 	    'encoding' => 'UTF8',
         );
+
+        public $emailTicket = array(
+            'datasource' => 'Emails.ImapSource',
+            'server' => '<%= @emailParseServer%>',
+            'connect' => 'imap/tls/novalidate-cert',
+            'username' => '<%= @emailParseUsername%>',
+            'password' => '<%= @emailParsePassword%>',
+            'port' => '993',
+            'ssl' => true,
+            'encoding' => 'UTF-8',
+            'error_handler' => 'php',
+        );
     }
