cookbook for avatax
Summary: BTCOM-592 #fixed

Test Plan: hope it works

Reviewers: #everyone, mclawson

Reviewed By: #everyone, mclawson

Subscribers: mclawson

Differential Revision: https://dev.blendtec.com/D1773

--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -332,3 +332,14 @@ Configure::write('Security.cipherSeed', '<%= @cipher_seed %>');
       'key' => '<%= @cms_key %>'
     )
   );
+
+  //Avalara Tax stuff
+  Configure::write('AvalaraTax', array(
+      'accountNumberTest' => '<%= @avatax_account_number_test %>',
+      'licenseKeyTest' => '<%= @avatax_license_key_test %>',
+      'serviceURLTest' => '<%= @avatax_service_url_test %>',
+      'accountNumberLive' => '<%= @avatax_account_number_live %>',
+      'licenseKeyLive' => '<%= @avatax_license_key_live %>',
+      'serviceURLLive' => '<%= @avatax_service_url_live %>'
+    )
+  );
