michael don't make me cry

--- a/blendtec/templates/default/td-agent.conf.erb
+++ b/blendtec/templates/default/td-agent.conf.erb
@@ -1,3 +1,7 @@
+<% if node['td_agent']['includes'] %>
+include conf.d/*.conf
+<% end %>
+<% if node['td_agent']['default_config'] %>
 ####
 ## Output descriptions:
 ##
@@ -8,6 +12,14 @@
 # @see http://docs.fluentd.org/articles/http-to-td
 #
 # This section matches events whose tag is td.DATABASE.TABLE
+<match td.*.*>
+  type tdlog
+  apikey <%= node['td_agent']['api_key'] %>
+
+  auto_create_table
+  buffer_type file
+  buffer_path /var/log/td-agent/buffer/td
+</match>
 
 ## match tag=debug.** and dump to console
 <match debug.**>
@@ -15,122 +27,38 @@
 </match>
 
 ####
-## Apache Access Source:
+## Source descriptions:
 ##
+
+## built-in TCP input
+## @see http://docs.fluentd.org/articles/in_forward
 <source>
-  type tail
-  format apache2
-  path /var/log/apache/access.log
-  pos_file /var/log/td-agent/apache.access_log.pos
-  tag apache.access
+  type forward
+  port <%= node['td_agent']['in_forward']['port'] %>
+  bind <%= node['td_agent']['in_forward']['bind'] %>
 </source>
 
-####
-## Log Apache Access to S3
-##
-<match apache.access>
-  type s3
-  aws_key_id <%= @key %>
-  aws_sec_key <%= @secret %>
-  s3_bucket <%= @bucket %>
-  s3_endpoint <%= @s3_end_point %>
-  path <%= @path %>
-  s3_object_key_format <%= @apache_access_s3_object_key_format %>
-  buffer_path <%= @apache_access_buffer_path %>
-  time_slice_format <%= @time_slice_format %>
-  time_slice_wait <%= @time_slice_wait %>
-  <%= @time_zone %>
-  buffer_chunk_limit <%= @buffer_chunk_limit %>
-</match>
+## built-in UNIX socket input
+#<source>
+#  type unix
+#</source>
 
-####
-## Apache Error Source:
-##
+<% if node["td_agent"]["in_http"]["enable_api"] %>
+# HTTP input
+# POST http://localhost:8888/<tag>?json=<json>
+# POST http://localhost:8888/td.myapp.login?json={"user"%3A"me"}
+# @see http://docs.fluentd.org/articles/in_http
 <source>
-  type tail
-  format /^\[[^ ]* (?<time>[^\]]*)\] \[(?<level>[^\]]*)\] (?<message>.*)$/
-  path /var/log/apache2/error.log
-  pos_file /var/log/td-agent/apache.error_log.pos
-  tag apache.error
+  type http
+  port <%= node['td_agent']['in_http']['port'] %>
+  bind <%= node['td_agent']['in_http']['bind'] %>
 </source>
+<% end %>
 
-####
-## Log Apache Error to S3
-##
-<match apache.error>
-  type s3
-  aws_key_id <%= @key %>
-  aws_sec_key <%= @secret %>
-  s3_bucket <%= @bucket %>
-  s3_endpoint <%= @s3_end_point %>
-  path <%= @path %>
-  s3_object_key_format <%= @apache_error_s3_object_key_format %>
-  buffer_path <%= @apache_error_buffer_path %>
-  time_slice_format <%= @time_slice_format %>
-  time_slice_wait <%= @time_slice_wait %>
-  <%= @time_zone %>
-  buffer_chunk_limit <%= @buffer_chunk_limit %>
-</match>
-
-####
-## App Access Source:
-##
+## live debugging agent
 <source>
-  type tail
-  format apache2
-  path /var/log/apache2/<%= @application %>-access.log
-  pos_file /var/log/td-agent/<%= @application %>.access_log.pos
-  tag <%= @application %>.access
+  type debug_agent
+  bind 127.0.0.1
+  port 24230
 </source>
-
-####
-## Log App Access to S3
-##
-<match <%= @application %>.access>
-  type s3
-  aws_key_id <%= @key %>
-  aws_sec_key <%= @secret %>
-  s3_bucket <%= @bucket %>
-  s3_endpoint <%= @s3_end_point %>
-  path <%= @path %>
-  s3_object_key_format <%= @app_access_s3_object_key_format %>
-  buffer_path <%= @app_access_buffer_path %>
-  time_slice_format <%= @time_slice_format %>
-  time_slice_wait <%= @time_slice_wait %>
-  <%= @time_zone %>
-  buffer_chunk_limit <%= @buffer_chunk_limit %>
-</match>
-
-####
-## App Error Source:
-##
-<source>
-  type tail
-  format /^\[[^ ]* (?<time>[^\]]*)\] \[(?<level>[^\]]*)\] (?<message>.*)$/
-  path /var/log/apache2/<%= @application %>-error.log
-  pos_file /var/log/td-agent/<%= @application %>.error_log.pos
-  tag <%= @application %>.error
-</source>
-
-####
-## Log App Error to S3
-##
-<match <%= @application %>.error>
-  type s3
-  aws_key_id <%= @key %>
-  aws_sec_key <%= @secret %>
-  s3_bucket <%= @bucket %>
-  s3_endpoint <%= @s3_end_point %>
-  path <%= @path %>
-  s3_object_key_format <%= @app_error_s3_object_key_format %>
-  buffer_path <%= @app_error_buffer_path %>
-  time_slice_format <%= @time_slice_format %>
-  time_slice_wait <%= @time_slice_wait %>
-  <%= @time_zone %>
-  buffer_chunk_limit <%= @buffer_chunk_limit %>
-</match>
-
-
-
-
-
+<% end %>
