--- a/blendtec/templates/default/td-agent.conf.erb
+++ b/blendtec/templates/default/td-agent.conf.erb
@@ -1,4 +1,6 @@
-
+<% if node['td_agent']['includes'] %>
+include conf.d/*.conf
+<% end %>
 <% if node['td_agent']['default_config'] %>
 ####
 ## Output descriptions:
