--- a/cakephp/templates/default/credentials.php.erb
+++ b/cakephp/templates/default/credentials.php.erb
@@ -90,7 +90,7 @@ Configure::write(
   );
 
   //Avalara Tax stuff
-  Configure::write('AvalaraTax', array(
+  Configure::write('Credentials.AvalaraTax', array(
       'accountNumberTest' => '<%= @avatax_account_number_test %>',
       'licenseKeyTest' => '<%= @avatax_license_key_test %>',
       'serviceURLTest' => '<%= @avatax_service_url_test %>',
