--- a/cakephp/templates/default/credentials.php.erb
+++ b/cakephp/templates/default/credentials.php.erb
@@ -99,3 +99,11 @@ Configure::write(
       'serviceURLLive' => '<%= @avatax_service_url_live %>'
     )
   );
+
+  //Affirm Credentials
+  Configure::write('Credentials.Affirm', array(
+  	'public_api_key' => '<%= affirm_public_api_key %>',
+  	'private_api_key' => '<%= affirm_private_api_key %>',
+  	'financial_product_key' => '<%= affirm_financial_product_key %>'
+  	)
+  );
