fix broken variable names for affirm creds

--- a/cakephp/templates/default/credentials.php.erb
+++ b/cakephp/templates/default/credentials.php.erb
@@ -100,10 +100,10 @@ Configure::write(
     )
   );
 
-  //Affirm Credentials
-  Configure::write('Credentials.Affirm', array(
-  	'public_api_key' => '<%= affirm_public_api_key %>',
-  	'private_api_key' => '<%= affirm_private_api_key %>',
-  	'financial_product_key' => '<%= affirm_financial_product_key %>'
-  	)
-  );
+//Affirm Credentials
+Configure::write('Credentials.Affirm', array(
+	'public_api_key' => '<%= @affirm_public_api_key %>',
+	'private_api_key' => '<%= @affirm_private_api_key %>',
+	'financial_product_key' => '<%= @affirm_financial_product_key %>'
+	)
+);
