Sets email default log to false

--- a/blendtec/templates/default/email.php.erb
+++ b/blendtec/templates/default/email.php.erb
@@ -17,7 +17,7 @@ class EmailConfig {
 		'replyTo' => 'noreply@blendtec.com',
 		'emailFormat' => 'both',
 		'transport' => 'AmazonSESTransport.AmazonSES',
-		'log' => true,
+		'log' => false,
 		'Amazon.SES.Key' => '<%= @key %>',
 		'Amazon.SES.Secret' => '<%= @secret %>',
 		'Amazon.SES.Region' => '<%= @region %>'
