--- a/cakephp/templates/default/core.php.erb
+++ b/cakephp/templates/default/core.php.erb
@@ -1,6 +1,6 @@
 <?php
 /**
-    * This is core configuration file.
+    * This is core configuration file...
     *
     * Use it to configure core behavior of Cake.
     *
