implement suretax stuff

--- a/blendtec/templates/default/credentials.php.erb
+++ b/blendtec/templates/default/credentials.php.erb
@@ -107,3 +107,15 @@ Configure::write('Credentials.Affirm', array(
 	'financial_product_key' => '<%= @affirm_financial_product_key %>'
 	)
 );
+
+//Suretax Tax stuff
+Configure::write('Credentials.SureTax',
+	array(
+		'testingUrl' => '<%= @suretax_testing_url %>',
+		'validationKeyTest' => '<%= @suretax_validation_key_test %>',
+		'clientNumberTest' => '<%= @suretax_client_number_test %>',
+		'realUrl' => '<%= @suretax_real_url %>',
+		'validationKeyReal' => '<%= @suretax_validation_key_real %>',
+		'clientNumberReal' => '<%= @suretax_client_number_real %>'
+    )
+);
