small corrections to the ruby code

--- a/blendtec/templates/default/credentials.php.erb
+++ b/blendtec/templates/default/credentials.php.erb
@@ -123,6 +123,6 @@ Configure::write('Credentials.SureTax',
 //Captcha
 Configure::write('Credentials.Captcha',
 	array(
-		'secret' => '<%= @capcha_secret %>''
+		'secret' => '<%= @capcha_secret %>'
 		)
 	);
